*Sun Jan 01 2012 Henri Gavin <.> 0.20100105
- source-code re-organization, moved matrix multiplication routines from eig.c to matrix.c

*Thu Dec 30 2011 Henri Gavin <.> 0.20100105
- source-code re-organization, new matrix.c, matrix.h contains lu_dcmp, ldl_dcmp, pseudo-inverse, and other matrix math functions 

*Wed Dec 21 2011 Henri Gavin <.> 0.20100105
- user-manual.html - Add acknowledgment section, small edit to 7.4.2 shear effects.  

*Thu Nov 17 2011 Henri Gavin <.> 0.20100105
- user-manual.html - gnuplot link for Win32 to the 4.2.6 version ... the 4.4.4 version seems to have trouble.    

*Fri Nov 11 2011 Henri Gavin <.> 0.20100105
- user-manual.html - improved installation instructions

*Wed Nov 9 2011 Henri Gavin <.> 0.20100105
- user-manual.html - update suggested text editors and links

*Tue Nov 8 2011 Henri Gavin <.> 0.20100105
- user-manual.html - simplification of installation instructions

*Tue Nov 8 2011 Henri Gavin <.> 0.20100105
- user-manual.html - slight simplification of Windows installation instructions

*Thu Nov 3 2011 Henri Gavin <.> 0.20100105
- user-manual.html - small wordsmith edits regarding experimental validation of shear correction factors.

*Thu Nov 3 2011 Henri Gavin <.> 0.20100105
- update user-manual.html, add Cowper's 1966 paper to the list of references for shear correction factors

*Tue Nov 1 2011 Henri Gavin <.> 0.20100105
- wordsmithing in user-manual.html regarding shear effects

*Tue Nov 1 2011 Henri Gavin <.> 0.20100105
- correction to user-manual.html regarding shear correction factor equations 

*Mon Oct 31 2011 Henri Gavin <.> 0.20100105
- update user-manual.html regarding shear correction factors and torsion
constants

*Sun Oct 30 2011 Henri Gavin <.> 0.20100105
- update user-manual.html regarding shear correction factors

*Sun Mar 27 2011 Henri Gavin <.> 0.20100105
- add .CSV input data template from Simon Fendall

*Mon Mar 7 2011 Henri Gavin <.> 0.20100105