@@ -98,6 +98,15 @@ Separate output data files list the internal axial force, shear forces, torsion,
 the terms of the GNU General Public License (GPL) as published by the
 <a href="http://www.fsf.org/">Free Software Foundation</a>.
 The software is distributed in the hope that it will be useful, but without any warranty; without even the implied warranty of merchantability or fitness for a particular purpose.  See <a href="../LICENSE.txt">LICENSE.txt</a> for details.
+<b>Frame3DD</b> is developed using the free-and-open
+<a href="http://www.vim.org/"><b>vim</b></a> text editor and the 
+<a href="http://gcc.gnu.org/"><b>gcc</b></a> compiler.
+</p>
+
+<p>If you find <b>Frame3DD</b> to be useful please consider
+a donation to the vim charity, 
+<a href="http://iccf-holland.org/">iccf-holland</a>, which provides education 
+and health-care to needy children in Uganda.
 </p>
 
 <!--
@@ -2816,6 +2825,19 @@ Hector Jensen</a> in
 CE 512, Theory of Structures</a>, at
 <a href="http://cee.engin.umich.edu/">The University of Michigan</a>.
 The development of Frame3DD has benefited from many questions, observations, and suggestions from students and other users over a number of years.
+</p>
+
+<p><b>Frame3DD</b> is developed using the free-and-open
+<a href="http://www.vim.org/"><b>vim</b></a> text editor and the 
+<a href="http://gcc.gnu.org/"><b>gcc</b></a> compiler.
+</p>
+
+<p>If you find <b>Frame3DD</b> to be useful please consider
+a donation to the vim charity, 
+<a href="http://iccf-holland.org/">iccf-holland</a>, which provides education 
+and health-care to needy children in Uganda.<br>
+<!-- Donations to <a href="http://iccf-holland.org">iccf-holland</a>
+are tax deductible in Holland, Germany, Canada and in the USA. -->
 </p>
 
 <a name="references"/><h2>16. References</h2>
